syntax = "proto3";

package biDstream;

option go_package="./";

message GreetReq {
    string name =1;
}

message GreetResp{
    string reply =1;
}